tools/k8s/dev/blockchain/flow-dev.k8s-service.yaml
# Which API version to use
# https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
apiVersion: v1
kind: Service
metadata:
  name: flow-dev
  labels:
    component: flow-dev
    tier: backend
spec:
  selector:
    component: flow-dev
    tier: backend
  ports:
    - port: 7000
      targetPort: 7000
