tools/k8s/dev/blockchain/blockchain-dev.k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blockchain-emulator
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: blockchain-emulator.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockchain-emulator
                port:
                  number: 7000
