tools/k8s/dev/blockchain/flow-dev.k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flow-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: flow-dev.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flow-dev
                port:
                  number: 7000
